--- a/root/.tmux.conf
+++ b/root/.tmux.conf
@@ -62,7 +62,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'rose-pine/tmux'
 
 set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-capture-pane-contents 'off'
 set -g @continuum-save-interval '15'
 set -g @continuum-restore 'on'
 
